[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyFootman.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 48 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="EnemyFootman" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
health = 4.0
damage = 0.5
speed = 50.0

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BodyCollisions" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="BodyCollisions"]
shape = SubResource( 4 )

[node name="AttackCooldown" type="Timer" parent="."]
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -55.0
margin_right = 32.0
margin_bottom = -41.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
